--- a/Kernel/makefile
+++ b/Kernel/makefile
@@ -30,3 +30,6 @@ all:
 	objcopy -R .note -R .comment -S -O binary tmp/kernel.o tmp/kernel.bin
 	cat tmp/loader.bin >> tmp/kernel.bin 
 	cp  tmp/kernel.bin ../KERNEL
+
+clean:
+	cd tmp && rm  -f *.o
